vlib/v/checker/tests/string_escape_x_err_b.out
vlib/v/checker/tests/string_escape_x_err_b.vv:2:15: error: `\x` used with no following hex digits
    1 | fn main() {
    2 |     println('\xhh')
      |               ^
    3 | }
